# research-simulations

./: .gitignore  AGENTS.md  CHANGELOG_AGENT.md  CLAUDE.md  MEMORY.md  REPLICATION_README.md  _FINDINGS_FINAL.txt  _QA_REPORT.txt  _audit_introspect.py  _audit_out.txt  _audit_out2.txt  _audit_out3.txt  _audit_tmp_game.json  _audit_tmp_game.txt  _bash_exec_check.txt  _bgcheck.txt  _bigprobe.txt  _cg_cols.txt  _deepdive_carbon.txt  _disp.json  _final_channel_check.txt  _g2.txt  _introspect.py  _introspect_out.txt  _introspect_out.txt.size  _introspect_stdout.txt  _introspect_stdout.txt.size  _joint_and_crashes.txt  _joint_results.txt  _lines.txt  _ms.txt  _obs_test_A.txt  _probe2.txt  _qa_analyze.py  _qa_iso.py  _qa_results.jsonl  _qa_runner.py  _qa_scan_types.py  _qa_smoke.py  _qa_smoke2.py  (+23 more)
simulation_app/experimental_features/self-learning simulator/: BENCHMARKS.md  BENCHMARK_PACKS.md  CHANGELOG.md  CLI.md  FIELDS.md  ITERATIONS.md  NEXT_STEPS_PLAN.md  PLAN_10X.md  PREDICTIVE_ROADMAP.md  README.md  RELEASE_NOTES.md  SOCSIM_INNER_WORKINGS.md  SOCSIM_TECHNICAL_OVERVIEW.md  SURVEYS.md  WEB_ACCESS_ABSOLUTES.md  WEB_CORPUS.md  pyproject.toml  setup.py
simulation_app/experimental_features/self-learning simulator/examples/: spec_dictator_identity.json  spec_holt_laury.json  spec_mpl_time.json  spec_public_goods_norms.json  spec_repeated_pd.json  spec_risk_holt_laury.json  spec_staghunt_identity.json  spec_survey_likert.json  spec_time_mpl.json  spec_trust_identity.json
simulation_app/experimental_features/self-learning simulator/out_test/: MODEL_CARD.md  run.log.jsonl  (+2 more)
(+516 files in other folders)
