[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "socsim"
version = "0.6.0"
description = "Evidence-traceable social science behavior simulator scaffold"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
    "jsonschema>=4.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["socsim*"]
